--- a/index.html
+++ b/index.html
@@ -92,7 +92,7 @@
 				<div class="imges"></div>
 				<div class="imges"></div>
 				<ul class="circle">
-					<li ></li>
+					<li class="dots"></li>
 					<li></li>
 					<li></li>
 					<li></li>
@@ -936,7 +936,16 @@
 			</div>
 			<div class="bottom">
 				<div class="left">
-					<img src="img/12.png" alt="">
+					<div class="time">18:00 场</div>
+					<img src="img/flashpurchase.png" alt="">
+					<div class="sub">距离开始还有</div>
+					<div class="coun">
+						<div class="box">00</div>
+						<div class="dosh">:</div>
+						<div class="box">00</div>
+						<div class="dosh">:</div>
+						<div class="box">00</div>
+					</div>
 				</div>
 				<div class="trans">
 					<ul>
@@ -2061,7 +2070,6 @@
 			
 	</div>
 	<!-- 固定栏结束 -->
-	<!--<script src="js/index.js"></script>-->
 	<script src="js/jq.js"></script>
 </body>
 </html>
